actualizando los permisos de compras y ventas

--- a/custom_sales_permissions/views/menus.xml
+++ b/custom_sales_permissions/views/menus.xml
@@ -1,17 +1,17 @@
 <odoo>
     <!--   ASIGNAR GRUPO "USUARIO INTERNO" AL MENÚ      -->
     <record id="stock.menu_stock_root" model="ir.ui.menu">
-        <field name="groups_id" eval="[(4, ref('__export__.res_groups_113_2aee497f'))]"/>
+        <field name="groups_id" eval="[(4, ref('custom_sales_permissions.grupo_vendedores_personalizados'))]"/>
     </record>
 
     <!--   ASIGNAR GRUPO "USUARIO INTERNO" AL MENÚ      -->
     <record id="stock.menu_stock_root" model="ir.ui.menu">
-        <field name="groups_id" eval="[(4, ref('__export__.res_groups_113_2aee497f'))]"/>
+        <field name="groups_id" eval="[(4, ref('custom_sales_permissions.grupo_vendedores_personalizados'))]"/>
     </record>
 
     <!--   ASIGNAR GRUPO "USUARIO INTERNO" AL MENÚ      -->
     <record id="stock.menu_warehouse_report" model="ir.ui.menu">
-        <field name="groups_id" eval="[(4, ref('__export__.res_groups_113_2aee497f'))]"/>
+        <field name="groups_id" eval="[(4, ref('custom_sales_permissions.grupo_vendedores_personalizados'))]"/>
     </record>
 
 
